compilateur scss en place, html page accueil en cours, début style

--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,45 @@
 
 <body>
     <header>
-        <img src="" alt="">
-        <menu>
-            <li>Accueil</li>
-            <li> Les soins </li>
-            <li> Qui suis je </li>
-            <li> Contact </li>
+        <menu class="nav_bar">
+            <li class="nav_bar_element">Accueil</li>
+            <li class="nav_bar_element"> Les soins </li>
+            <li class="nav_bar_element"> Qui suis je ?</li>
+            <li class="nav_bar_element"> Contact </li>
         </menu>
+
+        <img src="./assets/miezii-logo-BLACK-01-copie-2_1.svg"
+            alt="logo Miezzi: image vestorielle d'une femme nue, assise de dos" class="logo" />
+
     </header>
+    <section>
+        <h1>
+            Futur premier titre !
+        </h1>
+
+    </section>
+
+    <footer>
+        <div class="intern-div_footer">
+            <h3>
+                Informations
+            </h3>
+            <a href="#">CGV </a>
+            <a href="#"> Mentions légales</a>
+            <a href="#"> Politique de confidentialités </a>
+
+        </div>
+        <div class="intern-div_footer">
+            <h3>
+                Réseaux sociaux
+            </h3>
+            <a href="#"> WhatsApp</a>
+            <a href="#"> Instagram</a>
+
+        </div>
+
+
+    </footer>
 
 </body>
 
