--- a/public/index.html
+++ b/public/index.html
@@ -18,16 +18,100 @@
             <li class="nav_bar_element"> Contact </li>
         </menu>
 
-        <img src="./assets/miezii-logo-BLACK-01-copie-2_1.svg"
+        <img src="./assets/miezii-logo-BLACK-01-copie-2.png"
             alt="logo Miezzi: image vestorielle d'une femme nue, assise de dos" class="logo" />
 
+
     </header>
-    <section>
+    <main>
         <h1>
-            Futur premier titre !
+            Elles témoignent !
         </h1>
 
-    </section>
+        <section>
+            <div class="testimonies">
+                <h2>Bérénice</h2>
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum soluta, fuga aspernatur impedit dicta
+                    voluptate
+                    ducimus hic accusamus quas sit voluptatum quaerat, amet esse modi rem dolore quos veritatis? Modi,
+                    inventore
+                    sint quisquam magnam earum minus quae minima enim rerum optio officiis nesciunt distinctio ea odit
+                    fuga
+                    vel
+                    sit suscipit aut. Odit amet obcaecati, velit deserunt autem, distinctio quisquam in doloribus
+                    repudiandae,
+                    impedit rem tempore cum possimus inventore ex eos sint? Eum enim pariatur nostrum odio, quibusdam
+                    accusamus
+                    ducimus officiis, architecto excepturi nam, soluta minima totam aut dolores? Aperiam facere id,
+                    reprehenderit accusamus adipisci corrupti a fugiat exercitationem in neque hic incidunt dolorem
+                    totam
+                    ipsam
+                    enim, error autem inventore. Tempore possimus consequuntur id. Exercitationem accusantium debitis
+                    modi,
+                    dolor maxime quasi velit perferendis laudantium, veniam mollitia quisquam id est aspernatur ab
+                    aliquid
+                    quod
+                    non odit deserunt illo, expedita sit totam enim commodi? Itaque possimus dolore officia quae cumque
+                    quo,
+                    tempore aut.</p>
+            </div>
+
+            <div class="testimonies">
+                <h2>Camille</h2>
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum soluta, fuga aspernatur impedit dicta
+                    voluptate
+                    ducimus hic accusamus quas sit voluptatum quaerat, amet esse modi rem dolore quos veritatis? Modi,
+                    inventore
+                    sint quisquam magnam earum minus quae minima enim rerum optio officiis nesciunt distinctio ea odit
+                    fuga
+                    vel
+                    sit suscipit aut. Odit amet obcaecati, velit deserunt autem, distinctio quisquam in doloribus
+                    repudiandae,
+                    impedit rem tempore cum possimus inventore ex eos sint? Eum enim pariatur nostrum odio, quibusdam
+                    accusamus
+                    ducimus officiis, architecto excepturi nam, soluta minima totam aut dolores? Aperiam facere id,
+                    reprehenderit accusamus adipisci corrupti a fugiat exercitationem in neque hic incidunt dolorem
+                    totam
+                    ipsam
+                    enim, error autem inventore. Tempore possimus consequuntur id. Exercitationem accusantium debitis
+                    modi,
+                    dolor maxime quasi velit perferendis laudantium, veniam mollitia quisquam id est aspernatur ab
+                    aliquid
+                    quod
+                    non odit deserunt illo, expedita sit totam enim commodi? Itaque possimus dolore officia quae cumque
+                    quo,
+                    tempore aut.</p>
+            </div>
+            <div class="testimonies">
+                <h2>Laure</h2>
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum soluta, fuga aspernatur impedit dicta
+                    voluptate
+                    ducimus hic accusamus quas sit voluptatum quaerat, amet esse modi rem dolore quos veritatis? Modi,
+                    inventore
+                    sint quisquam magnam earum minus quae minima enim rerum optio officiis nesciunt distinctio ea odit
+                    fuga
+                    vel
+                    sit suscipit aut. Odit amet obcaecati, velit deserunt autem, distinctio quisquam in doloribus
+                    repudiandae,
+                    impedit rem tempore cum possimus inventore ex eos sint? Eum enim pariatur nostrum odio, quibusdam
+                    accusamus
+                    ducimus officiis, architecto excepturi nam, soluta minima totam aut dolores? Aperiam facere id,
+                    reprehenderit accusamus adipisci corrupti a fugiat exercitationem in neque hic incidunt dolorem
+                    totam
+                    ipsam
+                    enim, error autem inventore. Tempore possimus consequuntur id. Exercitationem accusantium debitis
+                    modi,
+                    dolor maxime quasi velit perferendis laudantium, veniam mollitia quisquam id est aspernatur ab
+                    aliquid
+                    quod
+                    non odit deserunt illo, expedita sit totam enim commodi? Itaque possimus dolore officia quae cumque
+                    quo,
+                    tempore aut.</p>
+            </div>
+        </section>
+
+
+    </main>
 
     <footer>
         <div class="intern-div_footer">
